# ForecastLab-AI

./: main.py  pyproject.toml
input/config/: hyperparameters.json
input/data/test/: test.csv
input/data/train/: train.csv
src/core/: predictor.py  trainer.py
src/utils/: hyperparameters.py  modeling.py  settings.py
src/utils/prophet/: model.py
tests/: test_hyperparameters.py  test_prepare.py  test_trainer.py
