[tool.poetry]
name = "forecastlab-ai"
version = "0.1.0"
description = "CLI workflow for preparing data, training forecasting models, and generating predictions."
authors = ["Feres Darouich"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = ">=2.2,<3.0"
prophet = ">=1.1.5,<2.0"
xgboost = ">=2.0,<3.0"
pyarrow = ">=15.0,<20.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
ruff = ">=0.8,<1.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[build-system]
requires = ["poetry-core>=1.8.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
